[package]
name = "ctrl-cidr"
version = "0.6.2"
authors = ["LOU Xun <xun.lou@controlant.com>"]
description = "CIDR rules controller for AWS networking"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = [
  "std",
  "derive",
  "help",
  "usage",
  "error-context",
] }
log = "0.4"
env_logger = "0.10"
ipnet = "2"

# Runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# AWS
aws-types = "0.56"
aws-config = "0.56"
aws-sdk-ec2 = "0.33"
aws-sdk-eks = "0.33"
aws-sdk-organizations = "0.33"
aws-sdk-sts = "0.33"
