[package]
name = "ctrl-cidr"
version = "0.7.0"
authors = ["LOU Xun <xun.lou@controlant.com>"]
description = "CIDR rules controller for AWS networking"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = [
  "std",
  "derive",
  "help",
  "usage",
  "error-context",
] }
log = "0.4"
env_logger = "0.10"
ipnet = "2"
fastrand = "2"

# Runtime
tokio = { version = "1", features = ["full"] }

# AWS
control-aws = { git = "https://github.com/controlant-org/control-aws.git", rev = "f0ceea7" }
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
aws-types = "1.0"
aws-sdk-ec2 = "1.2"
aws-sdk-eks = "1.2"
aws-sdk-organizations = "1.2"
aws-sdk-sts = "1.3"
