[package]
name = "ctrl-cidr"
version = "0.7.1"
authors = ["LOU Xun <xun.lou@controlant.com>"]
description = "CIDR rules controller for AWS networking"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = [
  "std",
  "derive",
  "help",
  "usage",
  "error-context",
] }
log = "0.4"
env_logger = "0.11"
ipnet = "2"
fastrand = "2"

# Runtime
tokio = { version = "1", features = ["full"] }

# AWS
control-aws = { git = "https://github.com/controlant-org/control-aws.git", rev = "b26c6b7" }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1"
aws-sdk-eks = "1"
aws-sdk-organizations = "1"
aws-sdk-sts = "1"
